Added final date and triggering always stats (#11)
